--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,3 @@
-
 DATABASE_URL="postgresql://username:password@localhost:5432/socratic"
-NEXTAUTH_SECRET="your-nextauth-secret-here"
-NEXTAUTH_URL="http://localhost:3000"
-GEMINI_API_KEY="your-gemini-api-key-here"
+NEXTAUTH_SECRET="randomcharacters"
+GEMINI_API_KEY="geminiapi"
